--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Cool box</title>
-    
-  </head>
-  <body>
-      <div>This is a cool box</div>
-  </body>
-</html>
+html {
+  font-family: sans-serif;
+}
+
+.cool-box {
+  width: 300px;
+  height: 200px;
+  text-align: center;
+  font-size: 24px;
+  background: linear-gradient(45deg, #ff0000, #0000ff);
+  border: 5px solid #000000;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
