--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-html {
-  font-family: sans-serif;
-}
-
-.cool-box {
-  width: 300px;
-  height: 200px;
-  text-align: center;
-  font-size: 24px;
-  background: linear-gradient(45deg, #ff0000, #0000ff);
-  border: 5px solid #000000;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CSS Cool Box</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="cool-box">
+    <h1>CSS Cool Box</h1>
+  </div>
+</body>
+</html>
