--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+	Name: Prathiksha Kairen
+	File: index.html
+	Date: 27 Feb 2024
+	A webpage showcasing a CSS cool box with a gradient background, border, and box shadow.
+	-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
